--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,55 +1,7 @@
 
 <div class="container-fluid">
-<div class="row">
-  <div class="col-sm-12 col-md-12 ">
-    
-    <section class="py-5 text-center grey_bg">
-      <div class="row py-lg-12">
-        <div class="col-sm-12 col-lg-6 col-md-6 mx-auto">
-            <div class="input-group mx-auto">
-                <span class="input-group-text" id="basic-addon1">
-                  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
-    <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"></path>
-  </svg>
-                </span>
-                <input type="text" class="form-control" placeholder="Search Members" aria-label="Search Members" aria-describedby="basic-addon1">
-              </div>
-        </div>
-      </div>
-    </section>
-    
-  </div>
-</div>
-<div class="row p-4">
-  <div class="col-sm-12 col-md-3">
-    <h4>List a member</h4>
-   
-    <div class="mute-Bborder">Location</div>
-    
-            <ul class="list-group">
-                
-                <li class="list-group-item" *ngFor="let item of importedDatas | slice:0:show; let i=index">
-                
-                  <input id="my_{{item.location.city}}" class="form-check-input me-1" type="checkbox" [checked]="item.isSelected" (change)="filterCity($event)" value="{{item.location.city}}" aria-label="...">
-                <b> {{item.location.city}}</b>
-                </li>
-                
-              
-              </ul>
-              <div *ngIf="show < importedDatas.length" class="view-more" (click)="viewMore()"> View More..</div>
-      </div>
- 
-  <div class="col-sm-12 col-md-9">
-      
-       
-         <app-member-list [checkboxValue]="selectedCheckbox" (transferData)="receivedData($event)"></app-member-list>
-       
-        
-      
-      
-    
-  </div>
+<app-header></app-header>
 
-</div>
-</div>
 <router-outlet></router-outlet>
+</div>
+
